tests/NormalTests/paczka1/fuzzy1/17917213.err
Error in line 13: 2WKfvPRw S481 36,1
Error in line 15: Wgo A936 89,5
Error in line 24: 2WKfvPRw A936 32,8
Error in line 37: Pmyr34aA A929 86,8
